feat: Major improvements - Added feedback button, admin panel button, latest news section, fixed events display

--- a/achievements.html
+++ b/achievements.html
@@ -136,5 +136,7 @@
     loadAchievements();
   </script>
 <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
