--- a/complaints.html
+++ b/complaints.html
@@ -80,5 +80,7 @@
     });
   </script>
 <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
