--- a/events.html
+++ b/events.html
@@ -683,5 +683,7 @@
   <script src="/assets/comments-and-registration.js"></script>
   <script src="/assets/all-features.js"></script>
   <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
