--- a/jobs.html
+++ b/jobs.html
@@ -124,7 +124,7 @@
               <div class="empty-message">
                 <div style="font-size: 64px; margin-bottom: 20px;">💼</div>
                 <h3>لا توجد وظائف متاحة حالياً</h3>
-                <p>تابعنا للحصول على أحدث الفرص</p>
+                <p>سنعلن عن الفرص الجديدة قريباً</p>
               </div>
             `;
             return;
@@ -174,5 +174,7 @@
     loadJobs();
   </script>
 <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
