--- a/news.html
+++ b/news.html
@@ -165,5 +165,7 @@
 
 <script src="/assets/feedback.js"></script>
 
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
