--- a/statistics.html
+++ b/statistics.html
@@ -137,5 +137,7 @@
     setInterval(loadStatistics, 30000);
   </script>
 <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
