--- a/about.html
+++ b/about.html
@@ -348,5 +348,7 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/newsletter.js"></script>
   <script src="/assets/form-validation.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
