--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -373,5 +373,7 @@
     })();
   </script>
 <script src="/assets/feedback.js"></script>
+  <script src="/assets/admin-button.js"></script>
+  <script src="/assets/feedback-button.js"></script>
 </body>
 </html>
