feat: Add unified design system with professional blue color scheme
- Created design-system.css with consistent design tokens
- Added professional blue color palette (replacing green)
- Unified typography, spacing, buttons, cards, and forms
- Applied design system to all 18 pages
- Improved overall consistency and user experience

--- a/about.html
+++ b/about.html
@@ -126,6 +126,7 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
