--- a/calendar.html
+++ b/calendar.html
@@ -259,6 +259,7 @@
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
