--- a/gallery.html
+++ b/gallery.html
@@ -165,6 +165,7 @@
   <script src="/assets/analytics.js"></script>
   <script src="/assets/khotwa-api.js"></script>
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <nav class="navbar" aria-label="الشريط العلوي">
