--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <!-- Skip link (لغتين) -->
