--- a/news.html
+++ b/news.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
 
   <script src="/assets/khotwa-api.js"></script>
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 
 <body>
