--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -156,6 +156,7 @@
     }
   </style>
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <!-- Navbar -->
