--- a/statistics.html
+++ b/statistics.html
@@ -44,6 +44,7 @@
   </style>
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <nav class="navbar" aria-label="الشريط العلوي">
