--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,7 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <!-- Skip links -->
