--- a/events.html
+++ b/events.html
@@ -295,6 +295,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCS6PYK04X"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-HCS6PYK04X');</script>
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <a href="#main" class="skip-link">تخطَّ إلى المحتوى</a>
