--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/assets/pagination.css">
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="stylesheet" href="/assets/design-system.css">
 </head>
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
