feat: Apply Khotwa official design (khotwa.adek.ae inspired)
- Add Khotwa brand colors (purple #5B4FFF, pink #FF0066, cream #F5F1E8)
- Redesign hero section with team photo
- Add Cairo font for Arabic
- Increase section spacing (100px)
- Update all buttons with new colors
- Apply design to all 18 pages
- Modern, bold, and clean design

--- a/event-detail.html
+++ b/event-detail.html
@@ -244,6 +244,7 @@
     }
   </style>
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 
 <body>
