--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 <body>
   <!-- Skip link (لغتين) -->
@@ -193,14 +194,12 @@
       </div>
       <div class="hero-img">
         <img
-          src="https://b.top4top.io/p_35166f7hr1.jpg"
-          alt="مجموعة طلاب مجلس خطوة – La Trobe"
-          width="1600" height="900"
+          src="/assets/img/khotwa-team-hero.jpg"
+          alt="فريق مجلس طلاب خطوة – Khotwa Student Council Team"
+          width="1280" height="853"
           loading="eager" decoding="async" fetchpriority="high"
-          referrerpolicy="no-referrer"
-          srcset="https://b.top4top.io/p_35166f7hr1.jpg 1600w,
-                  https://b.top4top.io/p_35166f7hr1.jpg 1200w,
-                  https://b.top4top.io/p_35166f7hr1.jpg 800w"
+          srcset="/assets/img/khotwa-team-hero.jpg 1280w,
+                  /assets/img/khotwa-team-hero.jpg 800w"
           sizes="(max-width:980px) 92vw, 50vw">
       </div>
     </div>
