--- a/news.html
+++ b/news.html
@@ -28,6 +28,7 @@
 
   <script src="/assets/khotwa-api.js"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 
 <body>
