--- a/resources.html
+++ b/resources.html
@@ -138,6 +138,7 @@
   <link rel="stylesheet" href="/assets/advanced-filters.css">
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 <body>
   <!-- Skip links -->
