--- a/statistics.html
+++ b/statistics.html
@@ -45,6 +45,7 @@
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 <body>
   <nav class="navbar" aria-label="الشريط العلوي">
