--- a/news-detail.html
+++ b/news-detail.html
@@ -182,6 +182,7 @@
     }
   </style>
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 
 <body>
