--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -157,6 +157,7 @@
   </style>
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 <body>
   <!-- Navbar -->
