--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/enhanced-navbar.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
 </head>
 <body>
