✨ Add dynamic settings loader system
- Created settings-loader.js to load settings from Backend API
- Added settings-loader.js to all 18 HTML pages
- Supports dynamic CSS variables for colors, typography, layout
- Implements smart caching (5 minutes)
- Auto-updates site title, footer, social media links
- Fallback to default settings on API error

Settings can now be controlled from Admin Panel!

--- a/event-detail.html
+++ b/event-detail.html
@@ -245,6 +245,7 @@
   </style>
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+    <link rel="stylesheet" href="assets/enhanced-navbar.css">
 </head>
 
 <body>
@@ -471,5 +472,6 @@
 <script src="/assets/feedback-button.js"></script>
 <script src="/assets/admin-button.js"></script>
 
+    <script src="js/settings-loader.js"></script>
 </body>
 </html>
