--- a/index.html
+++ b/index.html
@@ -745,5 +745,6 @@
   <script src="/assets/all-features.js"></script>
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
+    <script src="js/settings-loader.js"></script>
 </body>
 </html>
