--- a/events.html
+++ b/events.html
@@ -297,6 +297,7 @@
   <script src="/assets/khotwa-api.js?v=1766761756"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+    <link rel="stylesheet" href="assets/enhanced-navbar.css">
 </head>
 <body>
   <a href="#main" class="skip-link">تخطَّ إلى المحتوى</a>
@@ -706,5 +707,6 @@
   <script src="/assets/feedback.js"></script>
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
+    <script src="js/settings-loader.js"></script>
 </body>
 </html>
