--- a/gallery.html
+++ b/gallery.html
@@ -167,6 +167,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+    <link rel="stylesheet" href="assets/enhanced-navbar.css">
 </head>
 <body>
   <nav class="navbar" aria-label="الشريط العلوي">
@@ -356,5 +357,6 @@
 <script src="/assets/feedback.js"></script>
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
+    <script src="js/settings-loader.js"></script>
 </body>
 </html>
