--- a/resources.html
+++ b/resources.html
@@ -139,6 +139,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+    <link rel="stylesheet" href="assets/enhanced-navbar.css">
 </head>
 <body>
   <!-- Skip links -->
@@ -360,5 +361,6 @@
   <script src="/assets/form-validation.js"></script>
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
+    <script src="js/settings-loader.js"></script>
 </body>
 </html>
