✨ Add language toggle system + About/Council Members dynamic loading
- Created language-toggle.js for AR/EN switching
- Added language-toggle.js to all 18 HTML pages
- Created about-loader.js for dynamic About content
- Integrated with Backend API for About Us and Council Members
- Language preference stored in localStorage
- Auto-reload on language change

--- a/news-detail.html
+++ b/news-detail.html
@@ -355,5 +355,6 @@
 <script src="/assets/admin-button.js"></script>
 
     <script src="js/settings-loader.js"></script>
+    <script src="/js/language-toggle.js"></script>
 </body>
 </html>
