--- a/event-detail.html
+++ b/event-detail.html
@@ -473,5 +473,6 @@
 <script src="/assets/admin-button.js"></script>
 
     <script src="js/settings-loader.js"></script>
+    <script src="/js/language-toggle.js"></script>
 </body>
 </html>
