--- a/faq.html
+++ b/faq.html
@@ -243,5 +243,6 @@
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
     <script src="js/settings-loader.js"></script>
+    <script src="/js/language-toggle.js"></script>
 </body>
 </html>
