--- a/statistics.html
+++ b/statistics.html
@@ -143,5 +143,6 @@
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
     <script src="js/settings-loader.js"></script>
+    <script src="/js/language-toggle.js"></script>
 </body>
 </html>
