🔗 Connect About page to Backend - Dynamic Council Members loading

--- a/about.html
+++ b/about.html
@@ -189,56 +189,9 @@
         <h2 data-lang="en" hidden aria-hidden="true">Council Members</h2>
       </div>
 
-      <div class="members">
-        <!-- استبدل الروابط أدناه بروابط محلية لاحقًا: /assets/members/hamad.jpg ... -->
-        <div class="member-card">
-          <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="240"
-               loading="lazy" decoding="async" style="object-position:50% 30%;" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden aria-hidden="true">Hamad Al-Hajeri</h3>
-          <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden aria-hidden="true">President</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="240"
-               loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden aria-hidden="true">Abdullah Al-Jaberi</h3>
-          <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden aria-hidden="true">Vice President</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="240"
-               loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden aria-hidden="true">Abdulhadi Al-Marri</h3>
-          <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden aria-hidden="true">Team Leader</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="240"
-               loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden aria-hidden="true">Hassan Al-Sieari</h3>
-          <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden aria-hidden="true">Events Coordinator</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="240"
-               loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden aria-hidden="true">Hamad Al-Marri</h3>
-          <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden aria-hidden="true">Media Coordinator</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="240"
-               loading="lazy" decoding="async" style="object-position:50% 35%;" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden aria-hidden="true">Mohamed Al-Katheeri</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden aria-hidden="true">Member</p>
-        </div>
-
-        <div class="member-card">
-          <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="240"
-               loading="lazy" decoding="async" referrerpolicy="no-referrer">
-          <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden aria-hidden="true">Mouza Al-Ali</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden aria-hidden="true">Member</p>
-        </div>
+      <!-- Council Members will be loaded dynamically from Backend -->
+      <div class="members" id="council-members-container">
+        <!-- Loading... -->
       </div>
     </section>
   </main>
