--- a/about.html
+++ b/about.html
@@ -306,6 +306,7 @@
   <script src="/assets/form-validation.js"></script>
   <script src="/assets/admin-button.js"></script>
   <script src="/assets/feedback-button.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/settings-loader.js"></script>
     <script src="/js/about-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
