--- a/news-detail.html
+++ b/news-detail.html
@@ -354,6 +354,7 @@
 <script src="/assets/feedback-button.js"></script>
 <script src="/assets/admin-button.js"></script>
 
+    <script src="js/config.js"></script>
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
 </body>
