--- a/about.html
+++ b/about.html
@@ -310,5 +310,6 @@
     <script src="js/settings-loader.js"></script>
     <script src="/js/about-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
+<script src="js/menu-toggle.js"></script>
 </body>
 </html>
