--- a/contact.html
+++ b/contact.html
@@ -422,5 +422,6 @@
     <script src="js/config.js"></script>
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
+<script src="js/menu-toggle.js"></script>
 </body>
 </html>
