--- a/resources.html
+++ b/resources.html
@@ -364,5 +364,6 @@
     <script src="js/config.js"></script>
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
+<script src="js/menu-toggle.js"></script>
 </body>
 </html>
