--- a/volunteers.html
+++ b/volunteers.html
@@ -28,25 +28,76 @@
   <a href="#main" class="skip-link">انتقل إلى المحتوى</a>
 
   <!-- Navbar -->
-  <nav class="navbar" role="navigation" aria-label="التنقل الرئيسي">
-    <div class="container">
-      <div class="nav-inner">
-        <a href="index.html" class="brand">
-          <img src="/assets/img/logo.webp" alt="شعار خطوة" width="48" height="48" class="logo">
-          <span>مجلس طلاب خطوة</span>
-        </a>
-        <div class="nav-links">
-          <a href="index.html">الرئيسية</a>
-          <a href="about.html">من نحن</a>
-          <a href="news.html">الأخبار</a>
-          <a href="events.html">الفعاليات</a>
-          <a href="courses.html">الدورات</a>
-          <a href="volunteers.html" aria-current="page">التطوع</a>
-          <a href="contact.html">اتصل بنا</a>
+  <link rel="stylesheet" href="/assets/feedback.css">
+  <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
+  <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
+  <script src="/assets/khotwa-api.js?v=1766761756"></script>
+  <link rel="stylesheet" href="/assets/design-system.css">
+  <link rel="stylesheet" href="/assets/enhanced-navbar.css">
+  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+</head>
+<body>
+  <!-- Skip link (لغتين) -->
+  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
+
+  <!-- Navbar -->
+  <nav class="navbar" aria-label="الشريط العلوي">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية" aria-current="page">
+        <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40" decoding="async" loading="lazy">
+        <span data-lang="ar">مجلس طلاب خطوة</span>
+        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
+      </a>
+
+      <button id="menu-toggle" class="menu-toggle" type="button"
+              aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
+        <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+        <span data-lang="ar">القائمة</span><span data-lang="en" hidden aria-hidden="true">Menu</span>
+      </button>
+
+      <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
+        <a href="/index.html"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden aria-hidden="true">Home</span></a>
+        
+        <!-- Mega Menu: البرامج -->
+        <div class="nav-item-mega" data-mega="programs">
+          <button class="nav-link-mega" aria-expanded="false" aria-controls="mega-programs">
+            <span data-lang="ar">البرامج</span>
+            <span data-lang="en" hidden aria-hidden="true">Programs</span>
+            <svg viewBox="0 0 20 20" width="16" height="16" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>
+          </button>
+          <div class="mega-menu" id="mega-programs" hidden>
+            <div class="mega-menu-inner">
+              <div class="mega-column">
+                <h3 data-lang="ar">الأخبار والفعاليات</h3>
+                <h3 data-lang="en" hidden aria-hidden="true">News & Events</h3>
+                <a href="/news.html"><span data-lang="ar">📰 الأخبار</span><span data-lang="en" hidden aria-hidden="true">📰 News</span></a>
+                <a href="/events.html"><span data-lang="ar">📅 الفعاليات</span><span data-lang="en" hidden aria-hidden="true">📅 Events</span></a>
+                <a href="/calendar.html"><span data-lang="ar">🗓️ التقويم</span><span data-lang="en" hidden aria-hidden="true">🗓️ Calendar</span></a>
+              </div>
+              <div class="mega-column">
+                <h3 data-lang="ar">التطوير والتدريب</h3>
+                <h3 data-lang="en" hidden aria-hidden="true">Development & Training</h3>
+                <a href="/courses.html"><span data-lang="ar">🎓 الدورات والورش</span><span data-lang="en" hidden aria-hidden="true">🎓 Courses & Workshops</span></a>
+                <a href="/volunteers.html"><span data-lang="ar">❤️ الفرص التطوعية</span><span data-lang="en" hidden aria-hidden="true">❤️ Volunteer Opportunities</span></a>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </nav>
+
+        <!-- Mega Menu: عن المجلس -->
+        <div class="nav-item-mega" data-mega="council">
+          <button class="nav-link-mega" aria-expanded="false" aria-controls="mega-council">
+            <span data-lang="ar">عن المجلس</span>
+            <span data-lang="en" hidden aria-hidden="true">About Council</span>
+            <svg viewBox="0 0 20 20" width="16" height="16" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>
+          </button>
+          <div class="mega-menu" id="mega-council" hidden>
+            <div class="mega-menu-inner">
+              <div class="mega-column">
+                <h3 data-lang="ar">معلومات عنا</h3>
+                <h3 data-lang="en" hidden aria-hidden="true">About Us</h3>
+                <a href="/about.html"><span data-lang="ar">👥 من نحن</span><span data-lang="en" hidden aria-hidden="true">👥 About Us</span></a>
 
   <!-- Main Content -->
   <main id="main">
