إضافة نظام تحميل إعدادات الموقع ديناميكياً من Backend

--- a/about.html
+++ b/about.html
@@ -401,5 +401,6 @@ document.addEventListener('DOMContentLoaded', function() {
     <script src="/js/about-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
 <script src="js/menu-toggle.js"></script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
