--- a/course-details.html
+++ b/course-details.html
@@ -500,5 +500,6 @@ document.addEventListener('DOMContentLoaded', function() {
       }
     });
   </script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
