--- a/courses.html
+++ b/courses.html
@@ -349,5 +349,6 @@ document.addEventListener('DOMContentLoaded', function() {
     // Initial load
     renderCourses();
   </script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
