--- a/event-detail.html
+++ b/event-detail.html
@@ -476,5 +476,6 @@
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
 <script src="js/menu-toggle.js"></script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
