--- a/index.html
+++ b/index.html
@@ -577,5 +577,6 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
