--- a/news.html
+++ b/news.html
@@ -317,5 +317,6 @@ document.addEventListener('DOMContentLoaded', function() {
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
 <script src="js/menu-toggle.js"></script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
