--- a/qr-scanner.html
+++ b/qr-scanner.html
@@ -382,5 +382,6 @@
     <script src="js/config.js"></script>
     <script src="js/settings-loader.js"></script>
     <script src="/js/language-toggle.js"></script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
