--- a/volunteer-details.html
+++ b/volunteer-details.html
@@ -523,5 +523,6 @@ document.addEventListener('DOMContentLoaded', function() {
       }
     });
   </script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
