--- a/volunteers.html
+++ b/volunteers.html
@@ -339,5 +339,6 @@ document.addEventListener('DOMContentLoaded', function() {
     // Initial load
     renderOpportunities();
   </script>
+  <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
