--- a/courses.html
+++ b/courses.html
@@ -250,6 +250,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+  <script>
     const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
     
     // Fetch courses from backend
@@ -349,6 +351,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // Initial load
     renderCourses();
   </script>
+  <script src="/js/menu-toggle.js"></script>
   <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
