Fix: إصلاح JavaScript errors في جميع صفحات البرامج (4 صفحات) - إضافة script tags و menu-toggle.js

--- a/volunteers.html
+++ b/volunteers.html
@@ -247,6 +247,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+  <script>
     const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
     
     // Fetch volunteer opportunities from backend
@@ -339,6 +341,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // Initial load
     renderOpportunities();
   </script>
+  <script src="/js/menu-toggle.js"></script>
   <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
