--- a/course-details.html
+++ b/course-details.html
@@ -370,6 +370,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+  <script>
     const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
     
     // Get course ID from URL
@@ -500,6 +502,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }
     });
   </script>
+  <script src="/js/menu-toggle.js"></script>
   <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
