--- a/volunteer-details.html
+++ b/volunteer-details.html
@@ -387,6 +387,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+  <script>
     const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
     
     // Get opportunity ID from URL
@@ -523,6 +525,7 @@ document.addEventListener('DOMContentLoaded', function() {
       }
     });
   </script>
+  <script src="/js/menu-toggle.js"></script>
   <script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
