Fix: إصلاح عدم ظهور الأخبار - إضافة script tag المفقود

--- a/news.html
+++ b/news.html
@@ -200,6 +200,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+<script>
 (function () {
 
   document.getElementById('year').textContent = new Date().getFullYear();
