Fix: إصلاح عدم ظهور الفعاليات - إضافة script tag المفقود

--- a/events.html
+++ b/events.html
@@ -508,6 +508,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+<script>
     (function(){
       // سنة الحقوق
       const y = document.getElementById('year');
